# mocafe

./: .gitignore  README.md  setup.cfg  setup.py
demo/: README.rst  angiogenesis_2d.py  angiogenesis_3d.py  introduction_to_fenics.py  multiple_angiogenesis_simulations.py  multiple_pc_simulations.py  prostate_cancer2d.py  prostate_cancer3d.py
demo/demo_in/angiogenesis_2d/: parameters.ods
demo/demo_in/angiogenesis_3d/: parameters.ods
demo/prostate_cancer2d/: prostate_cancer2d.py
docs/: bib.rst  conf.py  index.html  ref.bib
docs/demo_doc/: prostate_cancer2d_codeobj.pickle
docs/doctrees/: bib.doctree  environment.pickle  index.doctree
docs/doctrees/demo_doc/: index.doctree  prostate_cancer2d.doctree
docs/html/: .buildinfo  bib.html  searchindex.js
docs/html/_sources/: index.rst.txt
docs/html/demo_doc/: index.html  prostate_cancer2d.html
docs/source/: code_documentation.rst  conf.py  index.rst  installation.rst  ref.bib
docs/source/_templates/: layout.html
docs/source/demo_doc/: demo_in  (+26 more)
mocafe/: __init__.py  __main__.py  expressions.py  math.py
mocafe/angie/: __init__.py  af_sourcing.py  angiogenesis.py  base_classes.py  forms.py  tipcells.py
mocafe/fenut/: __init__.py  fenut.py  gpu_solvers.py  log.py  mansimdata.py  parameters.py  solvers.py
mocafe/litforms/: __init__.py  prostate_cancer.py  xu16.py
projects/traang/: expressions.py  simulation.py
singularity/: mocafe.def
test/: test_math.py
test/angie/: conftest.py  p0.randomstate  test_mesh.h5  test_mesh.xdmf
test/litforms/: test_calling_litforms.py
test/math/: test_math.py
(+44 files in other folders)
