[metadata]
name = mocafe
version = 1.4.1
author = Franco Pradelli
author_email = franco.pradelli94@gmail.com
description = A Python package based on FEniCS to develop and simulate Phase Field Models for cancer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BioComputingUP/mocafe
project_urls =
    Documentation = https://biocomputingup.github.io/mocafe/build/html/index.html
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.6
install_requires=
    numpy>=1.15.4
    pandas
    pandas-ods-reader
    tqdm

[options.packages.find]
exclude =
    .cache
    demo
    docs
    projects
    singularity
    test
    main
